fix carousel, add addtl opes images, vertical spacing

--- a/src/pages/2020/components/Carousel/styles.module.scss
+++ b/src/pages/2020/components/Carousel/styles.module.scss
@@ -11,7 +11,6 @@
 }
 .slide {
     border-radius: 0.5rem;
-    overflow: hidden;
     cursor: pointer;
     transition: all 250ms ease-in-out;
     transform-origin: center;
@@ -27,7 +26,6 @@
     transform: scale(0.8) translate(-5%, 12.5%);
 }
 .currentSlide {
-    border: 2px solid $twentyTwentyBlue;
     box-shadow: 0px 74px 124px 0px rgba(15, 17, 23, 0.48);
     cursor: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.375 33.2739L32.125 22.4486C33.625 21.5825 33.625 19.4175 32.125 18.5514L13.375 7.72612C11.875 6.8601 10 7.94263 10 9.67468L10 31.3253C10 33.0574 11.875 34.1399 13.375 33.2739Z' fill='%23FFC90A' stroke='%231B1C1E' stroke-width='0.5'/%3E%3C/svg%3E%0A"), auto;
 }
