--- a/src/pages/2020/styles.module.scss
+++ b/src/pages/2020/styles.module.scss
@@ -104,30 +104,6 @@ $breakpoint-for-large-desktop-up: 1800px;
 	}
 }
 
-// GLOBAL STYLES
-.pagestyles {
-	section {
-		width: 100vw;
-		margin: auto;
-		max-width: 1440px;
-		position: relative;
-		padding: $spacingLarge 20px;
-		@include for-tablet-portrait-up {
-			padding: 80px 96px 160px;
-		}
-		@media screen and (max-width: 1500px) {
-			max-width: $screenLarge;
-		}
-	}
-}
-
-@keyframes designReport {
-	to {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
-
 // NEW FACES
 .newFaces {
 	display: flex;
@@ -158,7 +134,7 @@ $breakpoint-for-large-desktop-up: 1800px;
 		}
 		&::after {
 			content: '';
-			background: linear-gradient($black, rgba($black, 0));
+			background: linear-gradient(rgba($black, 0), $black);
 			width: 50%;
 			height: 6rem;
 			position: absolute;
